[package]
name = "cargo-docgen"
version = "0.1.3"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]

description = "run and format small doctest snippets"

documentation = "https://docs.rs/cargo-docgen"
repository = "https://github.com/stevedonovan/cargo-codegen"

readme = "readme.md"

keywords = ["documentation","snippets","testing","cargo"]

license = "MIT"

[dependencies]
easy-shortcuts = "0.2"
lapp = "0.3"
